# videos2

./: README.md  meson.build  meson_post_install.py
data/: application.css  io.elementary.videos2.desktop  io.elementary.videos2.gresource.xml  io.elementary.videos2.gschema.xml  meson.build  org.pantheon.videos2.desktop  org.pantheon.videos2.gresource.xml  org.pantheon.videos2.gschema.xml  org.pantheon.videos2.service.in
debian/: changelog  control  copyright
po/: io.elementary.videos2.pot  org.pantheon.videos2.pot  ru.po
src/: Application.vala  Constants.vala  Enums.vala  MainWindow.vala  Structs.vala  config.vala.in
src/Dialogs/: About.vala  Preferences.vala  Shortcuts.vala  UnsupportedFile.vala
src/Interfaces/: Client.vala
src/Objects/: MprisPlayer.vala  MprisRoot.vala  Player.vala  Playlist.vala
src/Services/: DiskManager.vala  Inhibitor.vala  LibraryManager.vala  MprisProxy.vala  RestoreManager.vala  Utils.vala
src/Views/: LibraryPage.vala  WelcomePage.vala
src/Widgets/: BottomBar.vala  HeadBar.vala  InfoBar.vala  MovieGrid.vala  Player.vala  PlaylistBox.vala  PlaylistItem.vala  PreviewPopover.vala  PropsBar.vala  TimeBar.vala  TopBar.vala
